--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,189 @@
-.App {
-  text-align: center;
+:root {
+  --yellow: #fffbeb;
+  --green: #25b79b;
+  --grey: #e0e0e0;
+  --dark-grey: #828282;
+  --light: #fff;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@font-face {
+  font-family: "IRANYekanRegularFaNum";
+  font-style: normal;
+  font-weight: 400;
+  src: local("IRANYekanRegularFaNum"), local("IRANYekanRegularFaNum"), url("../src/assets/fonts/IRANYekanRegularFaNum.ttf") format("truetype");
+  /* Modern Browsers */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-.App-header {
-  background-color: #282c34;
+ul {
+  list-style: none;
+}
+
+body {
+  direction: rtl;
+  overflow-x: hidden;
+  font-family: 'IRANYekanRegularFaNum' , Arial, Helvetica, sans-serif;
+}
+
+.text-green {
+  color: var(--green);
+}
+
+.text-grey {
+  color: var(--dark-grey);
+}
+
+.bg-yellow {
+  background-color: var(--yellow);
+}
+
+.bg-green {
+  background-color: var(--green);
+}
+
+.gap-1 {
+  gap: 1.5rem;
+}
+
+.radius-rounded {
+  border-radius: 200px;
+}
+
+.border-green {
+  border: 1px solid var(--green);
+}
+
+#MainLayout {
   min-height: 100vh;
+}
+
+.CustomInputWrapper label {
+  font-size: 0.7rem;
+  position: absolute;
+  top: -0.5rem;
+  right: 0.5rem;
+  background-color: var(--light);
+  padding: 0 0.3rem;
+  opacity: 0;
+  -webkit-transition: opacity ease 0.1s;
+  transition: opacity ease 0.1s;
+}
+
+.CustomInputWrapper .activeLabel {
+  opacity: 1 !important;
+}
+
+.CustomInputWrapper .CustomInput {
+  width: 100%;
+  height: 2.5rem;
+  padding: 0.2rem 0.5rem;
+  border-radius: 4px;
+  border: 1px solid var(--grey);
+  outline: none;
+}
+
+.CustomInputWrapper .CustomInput:focus {
+  border: 1px solid var(--green);
+}
+
+.CustomInputWrapper .CustomInput::-webkit-input-placeholder {
+  font-size: 0.8rem;
+}
+
+.CustomInputWrapper .CustomInput:-ms-input-placeholder {
+  font-size: 0.8rem;
+}
+
+.CustomInputWrapper .CustomInput::-ms-input-placeholder {
+  font-size: 0.8rem;
+}
+
+.CustomInputWrapper .CustomInput::placeholder {
+  font-size: 0.8rem;
+}
+
+.DropDownWrapper {
+  border: 1px solid var(--grey);
+  position: relative;
+  padding: 0.5rem;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
+.DropDownWrapper .DropHeader {
+  height: 1.5rem;
+  color: var(--dark-grey);
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 0.8rem;
 }
 
-.App-link {
-  color: #61dafb;
+.DropDownWrapper .DropHeader .selectedDrop {
+  color: #111 !important;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.DropDownWrapper label {
+  position: absolute;
+  top: -10px;
+  right: 5px;
+  padding: 0 0.3rem;
+  font-size: 0.7rem;
+  color: var(--dark-grey);
+  background-color: var(--light);
+  opacity: 0;
 }
+
+.DropDownWrapper .activeDropLabel {
+  opacity: 1;
+}
+
+.DropDownWrapper ul {
+  position: absolute;
+  top: 110%;
+  right: 0;
+  width: 100%;
+  border: 1px solid var(--grey);
+  max-height: 200px;
+  overflow-y: scroll;
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: opacity ease 0.3s;
+  transition: opacity ease 0.3s;
+  background-color: var(--light);
+  z-index: 999;
+}
+
+.DropDownWrapper ul li {
+  text-align: right;
+  font-size: 0.8rem;
+  color: var(--dark-grey);
+  padding: 0.5rem;
+  border-bottom: 1px dotted var(--grey);
+}
+
+.DropDownWrapper ul li:last-child {
+  border-bottom: none;
+}
+
+.DropDownWrapper ul li:hover {
+  background-color: var(--yellow);
+}
+
+.DropDownWrapper .showList {
+  opacity: 1;
+  visibility: visible;
+}
+/*# sourceMappingURL=App.css.map */
