--- a/src/App.scss
+++ b/src/App.scss
@@ -68,6 +68,9 @@ body{
 
 #MainLayout{
     min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 
