--- a/src/App.scss
+++ b/src/App.scss
@@ -35,6 +35,10 @@ body{
 
 // utility classes
 
+.font-size-0{
+    font-size: 0.8rem;
+}
+
 .text-green{
     color: var(--green);
 }
@@ -81,6 +85,7 @@ body{
     label{
         font-size: 0.7rem;
         position: absolute;
+        z-index: 9;
         top: -0.5rem;
         right: 0.5rem;
         background-color: var(--light);
@@ -104,6 +109,9 @@ body{
         &::placeholder{
             font-size: 0.8rem;
         }
+    }
+    .IputHasError{
+        border: 1px solid red !important;
     }
 }
 
