fixing the layout

--- a/src/App.scss
+++ b/src/App.scss
@@ -71,10 +71,10 @@ body{
 // layout and pages
 
 #MainLayout{
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    height: 100vh;
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: space-between;
 }
 
 
