--- a/src/App.css
+++ b/src/App.css
@@ -64,17 +64,7 @@ body {
 }
 
 #MainLayout {
-  min-height: 100vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  height: 100vh;
 }
 
 .CustomInputWrapper label {
