--- a/src/App.scss
+++ b/src/App.scss
@@ -25,10 +25,12 @@ ul{
     list-style: none;
 }
 
+html{
+    overflow-x: hidden !important;
+}
 
 body{
     direction: rtl;
-    overflow-x: hidden;
     font-family: 'IRANYekanRegularFaNum' , Arial, Helvetica, sans-serif;
 }
 
@@ -198,6 +200,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 0.5rem;
     .modalStyle{
         width: 100vw;
     }
